deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vola-agi-bar
  namespace: vola
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: vola.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vola-server
                port:
                  number: 8080
